feat: add Events nav link and enhance visitor guide with detailed itineraries

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -61,6 +61,7 @@ const {
           <li><a href="/">Home</a></li>
           <li><a href="/ruta/faedo-de-cinera">La Ruta</a></li>
           <li><a href="/historia-naturaleza">Historia y Naturaleza</a></li>
+          <li><a href="/eventos">Eventos</a></li>
           <li><a href="/guia-visitantes">Guía</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="/faq">FAQ</a></li>
