fix: use set:html directive for JSON-LD script tags to prevent escaping

--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -21,6 +21,6 @@ const jsonLd = {
       </div>
     ))}
   </dl>
-  <script type="application/ld+json">{JSON.stringify(jsonLd)}</script>
+  <script type="application/ld+json" set:html={JSON.stringify(jsonLd)} />
 </section>
 
