--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import heroImg from '../assets/blog-placeholder-5.jpg';
+import heroImg from '../assets/faedo-de-cinera.webp';
 interface Props {
   title: string;
   subtitle?: string;
