--- a/src/pages/ruta/faedo-de-cinera.astro
+++ b/src/pages/ruta/faedo-de-cinera.astro
@@ -42,7 +42,7 @@ const attractionLd = {
 
   <section class="container py-6 grid lg:grid-cols-3 gap-8">
     <div class="lg:col-span-2 space-y-6">
-      <div class="aspect-[16/9] rounded-lg overflow-hidden ring-1 ring-black/5">
+      <div class="aspect-video rounded-lg overflow-hidden ring-1 ring-black/5">
         <Image src={data.coverImage} alt={`Hayedo del ${data.title}`} widths={[640,960,1280]} sizes="(max-width: 1024px) 100vw, 960px" />
       </div>
       <article class="prose prose-slate max-w-none">
